# mldevops_exercise

./: lab1.py  pyproject.toml
